--- a/css.css
+++ b/css.css
@@ -52,3 +52,18 @@ ul.twitter li{list-style-type:circle}
 .buybutton{margin-left:330px}
 .feed{margin:0 10px}
 .env{border:0;padding:10px 10px 25px;color:#000;margin:0;font-size:5em;text-transform:uppercase;width:232px;height:10px;background-color:#fff;text-align:center}
+
+#lbOverlay{position:absolute;left:0;width:100%;background-color:#000;cursor:pointer}
+#lbCenter,#lbBottomContainer{position:absolute;left:50%;overflow:hidden;background-color:#fff}
+.lbLoading{background:#fff url(loading.gif) no-repeat center}
+#lbImage{border:10px solid #fff}
+#lbPrevLink,#lbNextLink{display:block;position:absolute;top:0;width:50%;outline:none}
+#lbPrevLink{left:0}
+#lbPrevLink:hover{background:transparent url(prevlabel.gif) no-repeat 0 15%}
+#lbNextLink{right:0}
+#lbNextLink:hover{background:transparent url(nextlabel.gif) no-repeat 100% 15%}
+#lbBottom{font-family:Verdana,Helvetica,sans-serif;font-size:10px;color:#666;line-height:1.4em;text-align:left;border:10px solid #fff;border-top-style:none}
+#lbCloseLink{display:block;float:right;width:66px;height:22px;background:transparent url(closelabel.gif) no-repeat center;margin:5px 0}
+#lbCaption,#lbNumber{margin-right:71px}
+#lbCaption{font-weight:700;.smd_slimboxfloat:left;width:100px;clear:both}
+.smd_slimbox li{width:100px;height:100px;float:left;text-align:center}
