--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-body{background-color:#FFf;background-image:url(./background.gif);background-repeat:no-repeat;text-align:left;margin:0;font-family:Helvetica,sans-serif;font-size:10px;color:#000}
+body{background-color:#FFf;background-image:url(./img/background.gif);background-repeat:no-repeat;text-align:left;margin:0;font-family:Helvetica,sans-serif;font-size:10px;color:#000}
 a{font-family:Helvetica,sans-serif;color:#F1A6BB;text-decoration:none;font-weight:700}
 a:link{font-weight:700;color:#F1A6BB;background-color:transparent;text-decoration:none;border:none}
 a:visited{color:#F1A6BB;background-color:transparent;text-decoration:none}
@@ -6,10 +6,10 @@ a:hover{color:#555;background-color:transparent;text-decoration:none}
 a:active{color:#F1A6BB;background-color:transparent}
 a img{border:none}
 #frame{width:1000px;padding:0;text-align:center;margin:0}
-#top{text-align:right;width:1000px;height:212px;background-attachment:scroll;background-image:url(./index_01.gif);background-repeat:no-repeat;background-position:top left;margin:0;padding:0;border:0}
-#contentleft{background-image:url(./index_02.gif);background-color:#fff;background-repeat:no-repeat;background-position:top left;padding:0;float:left;width:292px;height:100%;border:0}
+#top{text-align:right;width:1000px;height:212px;background-attachment:scroll;background-image:url(./img/index_01.gif);background-repeat:no-repeat;background-position:top left;margin:0;padding:0;border:0}
+#contentleft{background-image:url(./img/index_02.gif);background-color:#fff;background-repeat:no-repeat;background-position:top left;padding:0;float:left;width:292px;height:100%;border:0}
 #contentcenter{background-color:#fff;width:455px;height:100%;padding:0;float:left;text-align:left}
-#contentright{background-image:url(./index_04.gif);background-repeat:no-repeat;background-position:top left;background-color:#F1A6BB;width:252px;height:100%;padding:0;float:left;text-align:left;border:0 1px 0 0 solid #fff}
+#contentright{background-image:url(./img/index_04.gif);background-repeat:no-repeat;background-position:top left;background-color:#F1A6BB;width:252px;height:100%;padding:0;float:left;text-align:left;border:0 1px 0 0 solid #fff}
 #contentbottom{background-color:#F1A6BB;color:#fff;width:1000px;height:25px;padding:0;float:left;text-align:left}
 .entrytext{background-color:#fff;border:0;padding:0 5px;color:#000;text-align:left}
 h3{font-family:Helvetica,sans-serif;font-weight:700;border:0;padding:0 10px;color:#000;margin:20px 0 0;font-size:2.8em;text-transform:uppercase}
