--- a/css.css
+++ b/css.css
@@ -70,6 +70,7 @@ ul.twitter li{list-style-type:circle}
     border-radius: 350px;
     -webkit-box-shadow: 0 0 25em 30em #fff; /* 50 */-moz-box-shadow: 0 0 25em 30em #fff; /* 50 */box-shadow: 0 0 25em 30em #fff; /* 50 */
     text-align:center;
+    z-index:999999999;
 }
 
 /* The close button */
